# checksums_validator

./: CMakeLists.txt  ChecksumCalculator.cpp  ChecksumCalculator.h  Hasher.cpp  Hasher.h  README.md  README_EN.md  main.cpp
